tests/invalid/bytearray_wrong_arg_count/main.py
def run_case() -> None:
    x: bytearray = bytearray(1, 2, 3)

if __name__ == "__main__":
    run_case()
